tests/paczka2/big_fuzzy/55390567.err
Error in line 1: clhgMdJF S490 92,7
Error in line 2: IODzCXwVTIV A808 97,0
Error in line 10: v93vlh2Q A808 39,2
Error in line 19: v93vlh2Q S652 6,17
Error in line 18: MV4c A424 99,8
Error in line 11: v93vlh2Q S652 5,5
Error in line 22: MV4c S490 260,8
Error in line 37: MV4c S490 72,0
Error in line 31: ibc6V S652 45,7
Error in line 36: A424 S490 152,5
Error in line 39: qrm S490 73,5
Error in line 32: v93vlh2Q S490 138,1
Error in line 47: v93vlh2Q A424 68,9
Error in line 38: MV4c A808 3,2
Error in line 56: MV4c S652 4,8
Error in line 77: clhgMdJF A424 -1,5
Error in line 85: MV4c S490 60,7
Error in line 89: v93vlh2Q S490 2,58
Error in line 98: A424 S652 95,7
Error in line 110: MV4c A424 5,8
Error in line 105: IODzCXwVTIV A424 88,4
Error in line 116: MV4c A808 89,0
Error in line 125: A424 A808 47,2
Error in line 75: clhgMdJF A424 51,1
Error in line 141: ibc6V A808 22,3
Error in line 156: clhgMdJF S490 N,7
Error in line 162: qrm A;2; 235,2
Error in line 161: IODzCXwVTIV A424 64,4
Error in line 168: IODzCXwVTIV S652 55,7
Error in line 163: A424 S652 109,0
Error in line 155: qrm A424 84,9
Error in line 183: ibc6V A808 61,7
Error in line 186: ibc6V A424 89,6
Error in line 187: ibc6V S490 28,9
Error in line 190: MV4c S652 19,0
Error in line 181: clhgMdJF S490 64,2
Error in line 191: MV4c S490 39,1
Error in line 196: clhgMdJF A808 43,2
Error in line 205: clhgMdJF S490 198,0
Error in line 208: v93vlh2Q A808 49,9
Error in line 223: v93vlh2Q A424 57,4
Error in line 229: MV4c S652 89,8
Error in line 235: MV4c S490 62,8
Error in line 238: clhgMdJF S652 29,6
Error in line 244: MV4c S490 70,5
Error in line 239: clhgMdJF S490 39,5
